--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,9 @@
   "devDependencies": {
     "purescript-assert": "^1.0.0",
     "purescript-eff": "^1.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rightfold/purescript-compact.git"
   }
 }
