--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,17 @@
 {
   "name": "purescript-compact",
   "license": "BSD-3-Clause",
+  "ignore": [
+    "/.pulp-cache",
+    "/output"
+  ],
   "dependencies": {
-    "purescript-unsafe-coerce": "^1.0.0",
-    "purescript-prelude": "^1.0.1"
+    "purescript-unsafe-coerce": "^2.0.0",
+    "purescript-prelude": "^2.1.0"
   },
   "devDependencies": {
-    "purescript-assert": "^1.0.0",
-    "purescript-eff": "^1.0.0"
+    "purescript-assert": "^2.0.0",
+    "purescript-eff": "^2.0.0"
   },
   "repository": {
     "type": "git",
